here goes ur face

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             </button>
                         </div>
                         <div class="navbar-sidebar">
-                            <div id="menu-collapse" class="navbar-sidebar-collapse navbar-collapse collapse width">
+                            <div id="menu-collapse" class="navbar-sidebar-collapse collapse width">
                                 <div class="navbar-sidebar-wrapper">
                                     <div class="navbar-sidebar-body">
                                         <ul class="nav navbar-nav">
